--- a/RowingMachine-MTV/src/main/resources/templates/fragments/head.html
+++ b/RowingMachine-MTV/src/main/resources/templates/fragments/head.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html 	lang="ko"
+     	xmlns:th="http://www.thymeleaf.org">
 
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>RowingMachine-MTV</title>
-
+<head th:fragment="headFragment">
+	<title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE"></title>
+	<meta charset="UTF-8" />
+	
 	<!-- bootstrap css -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -15,7 +13,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<!-- style -->
-	<link rel="stylesheet" href="/static/common/css/style.css">
+	<link rel="shortcut icon" href="#">
+	<link rel="stylesheet" href="/css/common/style.css">
 
 	<!-- bootstrap js -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
@@ -25,13 +24,5 @@
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 
-<body>
-
-	<th:block layout:fragment="css"></th:block>
-	<!-- [content] 영역 시작 -->
-	<div layout:fragment="content"></div>
-	<!-- [content] 영역 끝 -->
-	<th:block layout:fragment="js"></th:block>
-
-</body>
 </html>
+
