--- a/RowingMachine-MTV/src/main/resources/templates/view/quiz-main.html
+++ b/RowingMachine-MTV/src/main/resources/templates/view/quiz-main.html
@@ -1,38 +1,64 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/defaultlayout">
+<html 	xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorator="layouts/defaultLayout">
 
-	<div class="row">
-		<div class="col-4"></div>
+<head>
+    <title>quiz</title>
+</head>
+
+	<div layout:fragment="content" class="row">
+	
+		<div class="col-3"></div>
+		<div class="col-1 text-center my-auto">
+			<i class="fas fa-angle-left fa-3x" onclick="goPrev();"></i>
+			<!-- <i class="fas fa-chevron-circle-left fa-3x btn-prev-awesome"></i> -->
+		</div>
 		<div class="col-4">
-			<div>
-				<div>권장 풀이시간이 15분 34초 남았어요!</div>
-				<div class="progress">
-					<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+		
+			<form action="" method="post" id="quizForm">
+				<input type="hidden" th:field="${userVO.userId}"/>
+				<input type="hidden" th:field="${userQuizVO.quizUserAnsSeq}"/>
+				<input type="hidden" th:field="${userQuizVO.userAnswer}"/>
+			
+				<div class="m-3 text-end">
+					<i class="fas fa-home fa-3x" onclick="goHome('quizForm');"></i>
 				</div>
-			</div>
-			<div class="my-5">
 				<div>
-					<div>문 26.</div>
-					<div class="lh-lg">
-						임차인이 임대인 소유 건물의 일부를 임차하여 사용ㆍ수익하던 중 임차건물 부분에서 화재가 발생하여 임차건물 부분이 아닌 건물 부분까지 불에 탄 경우에, 건물의 규모와 구조로 볼 때 건물 중 임차건물 부분과 그 밖의 부분이 상호 유지ㆍ존립함에 있어서 구조상 불가분의 임재를 이루는 관계에 있다면, 임차인은 임차건물의 보존에 관하여 선량한 관리자의 주의의무를 다하였음을 증명하지 못하는 이상 그 임차 외 건물 부분이 소훼되어 임대인이 입게 된 손해도 채무불이행으로 인한 손해로 배상할 의무가 있다.
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+					</div>
+					<div>권장 풀이시간이 15분 34초 남았어요!</div>
+				</div>
+				<div class="my-5">
+					<div id="quizDiv">
+						<input type="hidden" th:field="${quizVO.quizMstrInfoSeq}"/>
+						<input type="hidden" th:field="${quizVO.subjectTypeCd}"/>
+						<input type="hidden" th:field="${quizVO.srtNo}"/>
+						<input type="hidden" th:field="${quizVO.quizTotalCnt}"/>
+						<div>문 <span th:text="${quizVO.srtNo}"></span>.</div>
+						<div class="lh-lg">
+							<th:block th:text="${quizVO.content}"/>
+						</div>
+					</div>
+					<div class="d-flex justify-content-around align-items-center my-5 text-center btn-grp">
+						<i class="fas fa-check-circle fa-5x" onclick="trigger('O')"></i>
+						<!-- <i class="far fa-check-circle fa-5x"></i> -->
+						<i class="fas fa-times-circle fa-5x" onclick="trigger('X')"></i>
+						<!-- <i class="far fa-times-circle fa-5x"></i> -->
 					</div>
 				</div>
-				<div class="d-flex justify-content-around align-items-center my-5">
-					<i class="fas fa-chevron-circle-left fa-3x btn-prev-awesome"></i>
-					<i class="fas fa-angle-left fa-3x" style="display: none;"></i>
-					<i class="far fa-check-circle fa-5x"></i>
-					<i class="fas fa-check-circle fa-5x" style="display: none;"></i>
-					<i class="far fa-times-circle fa-5x"></i>
-					<i class="fas fa-times-circle fa-5x" style="display: none;"></i>
-					<i class="fas fa-chevron-circle-right fa-3x"></i>
-					<i class="fas fa-angle-right fa-3x" style="display: none;"></i>
-				</div>
-			</div>
-			<div class="col-4"></div>
+			</form>
 		</div>
+		<div class="col-1 text-center my-auto">
+			<i class="fas fa-angle-right fa-3x" onclick="goNext();"></i>
+			<!-- <i class="fas fa-chevron-circle-right fa-3x"></i> -->
+		</div>
+		<div class="col-3"></div>
 	</div>
+
+    <th:block layout:fragment="script">
+        <script th:src="@{/js/quiz.js}"></script>
+    </th:block>
 
 </html>
