--- a/RowingMachine-MTV/src/main/resources/templates/view/statistics.html
+++ b/RowingMachine-MTV/src/main/resources/templates/view/statistics.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/defaultlayout">
+<html 	xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorator="layouts/defaultLayout">
 
 	<div class="text-center">
 		<div>
