퀴즈 로직 구현중

--- a/RowingMachine-MTV/src/main/resources/templates/view/statistics.html
+++ b/RowingMachine-MTV/src/main/resources/templates/view/statistics.html
@@ -17,4 +17,8 @@
 		</div>
 	</div>
 
+    <th:block layout:fragment="script">
+        <script th:src="@{/js/quizFunc.js}"></script>
+    </th:block>
+
 </html>
