--- a/RowingMachine-MTV/src/main/resources/templates/view/index.html
+++ b/RowingMachine-MTV/src/main/resources/templates/view/index.html
@@ -9,7 +9,7 @@
 
 	<div layout:fragment="content" class="text-center">
 	<form action="" method="post" id="startForm">
-		<input type="hidden" th:field="${userQuizVO.userId}">
+		<input type="hidden" th:field="${userVO.userId}">
 	</form>
 		<div>
 			<h1 class="display-5 text-primary">제11회 변호사시험 합격예측</h1>
@@ -27,6 +27,6 @@
 	</div>
 
     <th:block layout:fragment="script">
-        <script th:src="@{/js/quiz.js}"></script>
+        <script th:src="@{/js/quizFunc.js}"></script>
     </th:block>
 </html>
