--- a/RowingMachine-MTV/src/main/resources/templates/view/quizMain.html
+++ b/RowingMachine-MTV/src/main/resources/templates/view/quizMain.html
@@ -11,15 +11,13 @@
 	
 		<div class="col-3"></div>
 		<div class="col-1 text-center my-auto">
-			<i class="fas fa-angle-left fa-3x" onclick="goPrev();"></i>
+			<i class="fas fa-angle-left fa-3x" onclick="goQuiz('-1');"></i>
 			<!-- <i class="fas fa-chevron-circle-left fa-3x btn-prev-awesome"></i> -->
 		</div>
 		<div class="col-4">
 		
 			<form action="" method="post" id="quizForm">
 				<input type="hidden" th:field="${userVO.userId}"/>
-				<input type="hidden" th:field="${userQuizVO.quizUserAnsSeq}"/>
-				<input type="hidden" th:field="${userQuizVO.userAnswer}"/>
 			
 				<div class="m-3 text-end">
 					<i class="fas fa-home fa-3x" onclick="goHome('quizForm');"></i>
@@ -32,33 +30,38 @@
 				</div>
 				<div class="my-5">
 					<div id="quizDiv">
-						<input type="hidden" th:field="${quizVO.quizMstrInfoSeq}"/>
-						<input type="hidden" th:field="${quizVO.subjectTypeCd}"/>
-						<input type="hidden" th:field="${quizVO.srtNo}"/>
-						<input type="hidden" th:field="${quizVO.quizTotalCnt}"/>
-						<div>문 <span th:text="${quizVO.srtNo}"></span>.</div>
+						<input type="hidden" th:field="${quizMstrInfoVO.quizMstrInfoSeq}"/>
+						<input type="hidden" th:field="${quizMstrInfoVO.quizUserAnsSeq}"/>
+						<input type="hidden" th:field="${quizMstrInfoVO.subjectTypeCd}"/>
+						<input type="hidden" th:field="${quizMstrInfoVO.srtNo}"/>
+						<input type="hidden" th:field="${quizMstrInfoVO.quizTotalCnt}"/>
+						<input type="hidden" th:field="${quizMstrInfoVO.userAnswer}"/>
+						<div>문 <span th:text="${quizMstrInfoVO.srtNo}"></span>.</div>
 						<div class="lh-lg">
-							<th:block th:text="${quizVO.content}"/>
+							<th:block th:text="${quizMstrInfoVO.content}"/>
+							<th:block th:text="${quizMstrInfoVO.userAnswer}"/>
 						</div>
 					</div>
 					<div class="d-flex justify-content-around align-items-center my-5 text-center btn-grp">
-						<i class="fas fa-check-circle fa-5x" onclick="trigger('O')"></i>
+						<i class="fas fa-check-circle fa-5x"
+							th:classappend="${quizMstrInfoVO.userAnswer} == 'O' ? active" onclick="trigger('O')"></i>
 						<!-- <i class="far fa-check-circle fa-5x"></i> -->
-						<i class="fas fa-times-circle fa-5x" onclick="trigger('X')"></i>
+						<i class="fas fa-times-circle fa-5x"
+							th:classappend="${quizMstrInfoVO.userAnswer} == 'X' ? active" onclick="trigger('X')"></i>
 						<!-- <i class="far fa-times-circle fa-5x"></i> -->
 					</div>
 				</div>
 			</form>
 		</div>
 		<div class="col-1 text-center my-auto">
-			<i class="fas fa-angle-right fa-3x" onclick="goNext();"></i>
+			<i class="fas fa-angle-right fa-3x" onclick="goQuiz('1');"></i>
 			<!-- <i class="fas fa-chevron-circle-right fa-3x"></i> -->
 		</div>
 		<div class="col-3"></div>
 	</div>
 
     <th:block layout:fragment="script">
-        <script th:src="@{/js/quiz.js}"></script>
+        <script th:src="@{/js/quizFunc.js}"></script>
     </th:block>
 
 </html>
