--- a/RowingMachine-MTV/src/main/resources/templates/view/quizMain.html
+++ b/RowingMachine-MTV/src/main/resources/templates/view/quizMain.html
@@ -7,60 +7,66 @@
     <title>quiz</title>
 </head>
 
-	<div layout:fragment="content" class="row">
+	<div layout:fragment="content" class="container-sm">
 	
-		<div class="col-3"></div>
-		<div class="col-1 text-center my-auto">
-			<i class="fas fa-angle-left fa-3x" onclick="goQuiz('-1');"></i>
-			<!-- <i class="fas fa-chevron-circle-left fa-3x btn-prev-awesome"></i> -->
-		</div>
-		<div class="col-4">
-		
-			<form action="" method="post" id="quizForm">
-				<input type="hidden" th:field="${userVO.userId}"/>
-			
-				<div class="m-3 text-end">
-					<i class="fas fa-home fa-3x" onclick="goHome('quizForm');"></i>
+	<h1 class="text-center" id="count-down-timer"></h1>
+	
+		<form action="" method="post" id="quizForm">
+			<input type="hidden" th:field="${userVO.userId}"/>
+			<input type="hidden" th:field="${quizMstrInfoVO.secSolving}"/>
+			<input type="hidden" th:field="${quizMstrInfoVO.minSolving}"/>
+
+			<div class="row">
+				<div class="col-2 text-center my-auto">
+					<i class="fas fa-angle-left fa-3x" onclick="goQuiz('-1');"></i>
+					<!-- <i class="fas fa-chevron-circle-left fa-3x btn-prev-awesome"></i> -->
 				</div>
-				<div>
-					<div class="progress">
-						<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-					</div>
-					<div>권장 풀이시간이 15분 34초 남았어요!</div>
-				</div>
-				<div class="my-5" id="quizDiv">
+	
+				<div class="col-8">
 					<div>
-						<input type="hidden" th:field="${quizMstrInfoVO.quizMstrInfoSeq}"/>
-						<input type="hidden" th:field="${quizMstrInfoVO.quizUserAnsSeq}"/>
-						<input type="hidden" th:field="${quizMstrInfoVO.subjectTypeCd}"/>
-						<input type="hidden" th:field="${quizMstrInfoVO.srtNo}"/>
-						<input type="hidden" th:field="${quizMstrInfoVO.quizTotalCnt}"/>
-						<input type="hidden" th:field="${quizMstrInfoVO.userAnswer}"/>
-						<div>문 <span th:text="${quizMstrInfoVO.srtNo}"></span>.</div>
-						<div class="lh-lg">
-							<th:block th:text="${quizMstrInfoVO.content}"/>
+						<div class="m-3 text-end">
+							<i class="fas fa-home fa-3x" onclick="goHome('quizForm');"></i>
+						</div>
+						<div class="progress">
+							<div class="progress-bar progress-bar-striped progress-bar-animated" id="progress-bar" role="progressbar" style="width: 100%;">105%</div>
 						</div>
 					</div>
-					<div class="d-flex justify-content-around align-items-center my-5 text-center btn-grp">
-						<i class="fas fa-check-circle fa-5x"
-							th:classappend="${quizMstrInfoVO.userAnswer} == 'O' ? active" onclick="trigger(this, 'O')"></i>
-						<!-- <i class="far fa-check-circle fa-5x"></i> -->
-						<i class="fas fa-times-circle fa-5x"
-							th:classappend="${quizMstrInfoVO.userAnswer} == 'X' ? active" onclick="trigger(this, 'X')"></i>
-						<!-- <i class="far fa-times-circle fa-5x"></i> -->
+		
+					<div class="my-5" id="quizDiv">
+						<div>
+							<input type="hidden" th:field="${quizMstrInfoVO.quizMstrInfoSeq}"/>
+							<input type="hidden" th:field="${quizMstrInfoVO.quizUserAnsSeq}"/>
+							<input type="hidden" th:field="${quizMstrInfoVO.subjectTypeCd}"/>
+							<input type="hidden" th:field="${quizMstrInfoVO.srtNo}"/>
+							<input type="hidden" th:field="${quizMstrInfoVO.quizTotalCnt}"/>
+							<input type="hidden" th:field="${quizMstrInfoVO.userAnswer}"/>
+							<div>문 <span th:text="${quizMstrInfoVO.srtNo}"></span>.</div>
+							<div class="lh-lg">
+								<th:block th:text="${quizMstrInfoVO.content}"/>
+							</div>
+						</div>
+						<div class="d-flex justify-content-around align-items-center my-5 text-center btn-grp">
+							<i class="fas fa-check-circle fa-5x"
+								th:classappend="${quizMstrInfoVO.userAnswer} == 'O' ? active" onclick="trigger(this, 'O')"></i>
+							<!-- <i class="far fa-check-circle fa-5x"></i> -->
+							<i class="fas fa-times-circle fa-5x"
+								th:classappend="${quizMstrInfoVO.userAnswer} == 'X' ? active" onclick="trigger(this, 'X')"></i>
+							<!-- <i class="far fa-times-circle fa-5x"></i> -->
+						</div>
 					</div>
 				</div>
-			</form>
-		</div>
-		<div class="col-1 text-center my-auto">
-			<i class="fas fa-angle-right fa-3x" onclick="goQuiz('1');"></i>
-			<!-- <i class="fas fa-chevron-circle-right fa-3x"></i> -->
-		</div>
-		<div class="col-3"></div>
+				
+				<div class="col-2 text-center my-auto">
+					<i class="fas fa-angle-right fa-3x" onclick="goQuiz('1');"></i>
+					<!-- <i class="fas fa-chevron-circle-right fa-3x"></i> -->
+				</div>
+			</div>
+		</form>
+		
 	</div>
 
-    <th:block layout:fragment="script">
-        <script th:src="@{/js/quizFunc.js}"></script>
-    </th:block>
+	<th:block layout:fragment="script">
+		<script th:src="@{/js/quizFunc.js}"></script>
+	</th:block>
 
 </html>
