--- a/RowingMachine-MTV/src/main/resources/templates/fragments/head.html
+++ b/RowingMachine-MTV/src/main/resources/templates/fragments/head.html
@@ -22,6 +22,15 @@
 
 	<!-- jquery -->
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	
+	<!-- chart.js -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.0/chart.min.js" integrity="sha512-GMGzUEevhWh8Tc/njS0bDpwgxdCJLQBWG3Z2Ct+JGOpVnEmjvNx6ts4v6A2XJf1HOrtOsfhv3hBKpK9kE5z8AQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+	<!-- 카카오 스크립트 -->
+	<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+	<script type="text/javascript">
+		Kakao.init('e48108dd0d2c5884764f47d3937cc0d8');
+	</script>
 </head>
 
 </html>
