--- a/RowingMachine-MTV/src/main/resources/templates/view/quiz/result.html
+++ b/RowingMachine-MTV/src/main/resources/templates/view/quiz/result.html
@@ -24,7 +24,7 @@
 	</div>
 
     <th:block layout:fragment="script">
-        <script th:src="@{/js/quizFunc.js}"></script>
+        <script th:src="@{/js/quiz/quizFunc.js}"></script>
     </th:block>
 
 </html>
