--- a/RowingMachine-MTV/src/main/resources/templates/view/quiz/main.html
+++ b/RowingMachine-MTV/src/main/resources/templates/view/quiz/main.html
@@ -13,6 +13,7 @@
 	
 		<form action="" method="post" id="quizForm">
 			<input type="hidden" th:field="${userVO.userId}"/>
+			<input type="hidden" th:field="${userVO.userNm}"/>
 			<input type="hidden" th:field="${quizMstrInfoVO.secSolving}"/>
 			<input type="hidden" th:field="${quizMstrInfoVO.minSolving}"/>
 
@@ -24,8 +25,28 @@
 	
 				<div class="col-8">
 					<div>
-						<div class="m-3 text-end">
-							<i class="fas fa-home fa-3x" onclick="goHome('quizForm');"></i>
+						<div class="m-3 d-flex justify-content-between">
+							<div class="row row-cols-lg-auto g-3 align-items-center">
+								<div class="col-12">
+									<select class="form-select form-select-lg fx-bold" aria-label=".form-select-lg example">
+										<option value="10">헌법</option>
+										<option value="20">형법</option>
+										<option value="30">민법</option>
+									</select>
+								</div>
+								<div class="col-12">
+									<select class="form-select form-select-lg fx-bold" aria-label=".form-select-lg example">
+										<option value="1">1</option>
+										<option value="2">2</option>
+										<option value="3">3</option>
+										<option value="4">4</option>
+										<option value="5">5</option>
+									</select>
+								</div>
+							</div>
+							<div>
+								<i class="fas fa-home fa-3x" onclick="goHome('quizForm');"></i>
+							</div>
 						</div>
 						<div class="progress">
 							<div class="progress-bar progress-bar-striped progress-bar-animated" id="progress-bar" role="progressbar" style="width: 100%;">105%</div>
@@ -40,8 +61,9 @@
 							<input type="hidden" th:field="${quizMstrInfoVO.srtNo}"/>
 							<input type="hidden" th:field="${quizMstrInfoVO.quizTotalCnt}"/>
 							<input type="hidden" th:field="${quizMstrInfoVO.userAnswer}"/>
-							<div>문 <span th:text="${quizMstrInfoVO.srtNo}"></span>.</div>
-							<div class="lh-lg">
+							<input type="hidden" th:field="${quizMstrInfoVO.takeRev}"/>
+							<div class="fs-5 fw-bold">Q<span th:text="${quizMstrInfoVO.srtNo}"></span>.</div>
+							<div class="lh-lg fs-5">
 								<th:block th:text="${quizMstrInfoVO.content}"/>
 							</div>
 						</div>
@@ -66,7 +88,15 @@
 	</div>
 
 	<th:block layout:fragment="script">
-		<script th:src="@{/js/quizFunc.js}"></script>
+		<script>
+			$(function() {
+				var userNm = $('#userNm').val();
+				if(userNm != '') {
+					alert(userNm + '님 환영합니다.');
+				}
+			})
+		</script>
+		<script th:src="@{/js/quiz/quizFunc.js}"></script>
 	</th:block>
 
 </html>
