모바일 레이아웃 수정

--- a/RowingMachine-MVP/src/main/resources/templates/layouts/defaultLayout.html
+++ b/RowingMachine-MVP/src/main/resources/templates/layouts/defaultLayout.html
@@ -42,7 +42,7 @@
 			</div> -->
 		
 			<!-- content -->
-			<div class="col-8 container-sm">
+			<div class="col-12 container-lg">
 				<div layout:fragment="content"></div>
 			</div>
 
