--- a/RowingMachine-MVP/src/main/resources/templates/fragments/footer.html
+++ b/RowingMachine-MVP/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html	lang="ko"
-	xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 	
 	<footer th:fragment="footerFragment"></footer>
 
