--- a/RowingMachine-MVP/src/main/resources/templates/fragments/header.html
+++ b/RowingMachine-MVP/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html	lang="ko"
-	xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
 	<header th:fragment="headerFragment"></header>
 
