--- a/RowingMachine-MVP/src/main/resources/templates/fragments/leftSidebar.html
+++ b/RowingMachine-MVP/src/main/resources/templates/fragments/leftSidebar.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layouts/defaultLayout}">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="sidebarFragment">
-	<div class="bg-primary" style="height:500px">
-		사이드바
+	<div class="border-primary border-end p-5" style="font-family: 'KOTRA_BOLD-Bold';">
+	
+		<th:block th:each=cnmmCd:${cnmmCdList}>
+			<div class="display-6 m-2">
+				<a href="#" th:text="${cnmmCd.cmmnDtlNm}"></a>
+			</div>
+			<th:block th:each="num : ${#numbers.sequence(1, quizMstrInfoVO.quizTotalCnt)}"
+				th:if="${cnmmCd.cmmnDtlCd == quizMstrInfoVO.subjectTypeCd}">
+				<a href="#"><span class="fs-5 m-3" th:text="${#strings.length(num) == 1 ? '0' + num : num}" ></span></a>
+			</th:block>
+		</th:block>
+		
 	</div>
 </div>
