--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/modal/goHomeModal.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/modal/goHomeModal.html
@@ -12,7 +12,7 @@
 			<div class="modal-body">
 				<div class="mb-3 text-center">
 					<label for="message-text" class="col-form-label d-grid">
-						<span>홈으로 가면, 모든 기록이 지워집니다.</span>
+						<span>GUEST는 홈으로 가면, 모든 기록이 지워집니다.</span>
 						<span>홈으로 이동하시겠습니까?</span>
 					</label>
 				</div>
