--- a/RowingMachine-MVP/src/main/resources/static/css/common/style.css
+++ b/RowingMachine-MVP/src/main/resources/static/css/common/style.css
@@ -1,105 +1,120 @@
 body, #wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 }
 
 footer {
-  margin-top: auto;
+	margin-top: auto;
 }
 
 body {
-    font-family: 'NEXON Lv1 Gothic OTF Light';
+	font-family: 'NEXON Lv1 Gothic OTF Light';
 }
 
 hr.solid {
-    border-top: 3px solid #086972;
+	border-top: 3px solid #086972;
 }
 
 .text-primary {
-    color: #086972 !important;
+	color: #086972 !important;
 }
 
 .bg-primary {
-    background-color: #086972 !important;
+	background-color: #086972 !important;
 }
+
 .btn-outline-primary {
-    color: #086972;
-    border-color: #086972;
+	color: #086972;
+	border-color: #086972;
 }
+
 .btn-outline-primary:hover {
-    color: #fff;
-    background-color: #086972;
-    border-color: #086972;
+	color: #fff;
+	background-color: #086972;
+	border-color: #086972;
 }
+
 .btn-primary {
-    background-color: #086972;
-    border-color: #086972;
-    color: #FFF; }
-.btn-primary:hover,
-.btn-primary:focus {
-    border-color: #086972;
-    background-color: #086972;
-    color: #FFF; }
-.btn-primary:active,
-.btn-primary:visited,
-.btn-primary:active:focus,
-.btn-primary:active:hover {
-    border-color: #086972;
-    background-color: #086972;
-    color: #FFF; }
+	background-color: #086972;
+	border-color: #086972;
+	color: #FFF;
+}
+
+.btn-primary:hover, .btn-primary:focus {
+	border-color: #086972;
+	background-color: #086972;
+	color: #FFF;
+}
+
+.btn-primary:active, .btn-primary:visited, .btn-primary:active:focus,
+	.btn-primary:active:hover {
+	border-color: #086972;
+	background-color: #086972;
+	color: #FFF;
+}
 
 a {
-    color: black !important;
-    text-decoration: none;
+	color: black !important;
+	text-decoration: none;
 }
 
 a:hover, button:hover, i:hover {
-    cursor: pointer !important;
+	cursor: pointer !important;
 }
 
 .nav-pills .active {
-    color: white !important;
-    background-color:  #086972 !important;
+	color: white !important;
+	background-color: #086972 !important;
 }
 
 .border-primary {
-    border-color: #086972 !important;
+	border-color: #086972 !important;
 }
 
 @font-face {
-    font-family: 'NEXON Lv1 Gothic OTF Bold';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF Bold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'NEXON Lv1 Gothic OTF Bold';
+	src:
+		url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF Bold.woff')
+		format('woff');
+	font-weight: normal;
+	font-style: normal;
 }
 
 @font-face {
-    font-family: 'NEXON Lv1 Gothic OTF';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'NEXON Lv1 Gothic OTF';
+	src:
+		url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff')
+		format('woff');
+	font-weight: normal;
+	font-style: normal;
 }
 
 @font-face {
-    font-family: 'NEXON Lv1 Gothic OTF Light';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF Light.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'NEXON Lv1 Gothic OTF Light';
+	src:
+		url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF Light.woff')
+		format('woff');
+	font-weight: normal;
+	font-style: normal;
 }
 
 @font-face {
-    font-family: 'KOTRA_BOLD-Bold';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10-21@1.1/KOTRA_BOLD-Bold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'KOTRA_BOLD-Bold';
+	src:
+		url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10-21@1.1/KOTRA_BOLD-Bold.woff')
+		format('woff');
+	font-weight: normal;
+	font-style: normal;
 }
 
 @font-face {
-    font-family: 'GongGothicMedium';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10@1.0/GongGothicMedium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'GongGothicMedium';
+	src:
+		url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10@1.0/GongGothicMedium.woff')
+		format('woff');
+	font-weight: normal;
+	font-style: normal;
 }
 
 h1 {
@@ -111,19 +126,23 @@ i:hover {
 }
 
 i.active {
-	color: #086972;	
+	color: #086972;
 }
 
 i {
 	color: black;
 }
 
-.quizTd:hover {
+.quizNumTd:hover {
 	background-color: #086972;
 	cursor: pointer;
 	color: white !important;
 }
 
-#sidebar a:hover {
+#sidebar a:hover:not(.bg-secondary) {
 	color: #086972 !important;
+}
+
+#sidebar .bg-secondary a:hover {
+	color: white !important;
 }
