--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/main.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layouts/defaultLayout}">
+	layout:decorate="~{layouts/sidebarLayout}">
 
 <head>
     <title>quiz</title>
@@ -21,12 +21,12 @@
 		</div>
 
 		<div class="row">
-			<div class="col-2 text-center mt-5 pt-5">
+			<div class="col text-center mt-5 pt-5">
 				<i class="fas fa-angle-left fa-3x mt-5 pt-5" onclick="goQuiz('prev');"></i>
 				<!-- <i class="fas fa-chevron-circle-left fa-3x btn-prev-awesome"></i> -->
 			</div>
 
-			<div class="col-8">
+			<div class="col-9">
 				<div>
 					<div class="m-3 d-flex justify-content-end">
 						<div>
@@ -58,7 +58,7 @@
 									<button type="button" class="btn btn-primary mx-3" onclick="toggleCmntr();">해설</button>
 								</div>
 							</div>
-							<div class="row g-3 w-50 align-items-center">
+							<div class="row g-3 w-50 align-items-center" style="display:none">
 								<div class="col">
 									<select class="form-select form-select-lg fx-bold" aria-label=".form-select-lg example"
 										onchange="selectQuiz();" id="subjectType">
@@ -99,7 +99,7 @@
 				</div>
 			</div>
 			
-			<div class="col-2 text-center mt-5 pt-5">
+			<div class="col text-center mt-5 pt-5">
 				<i class="fas fa-angle-right fa-3x mt-5 pt-5" onclick="goQuiz('next');"></i>
 				<!-- <i class="fas fa-chevron-circle-right fa-3x"></i> -->
 			</div>
