--- a/RowingMachine-MVP/src/main/resources/templates/layouts/defaultLayout.html
+++ b/RowingMachine-MVP/src/main/resources/templates/layouts/defaultLayout.html
@@ -6,6 +6,7 @@
 	<!-- [head] 영역 시작 -->
 <head>
 	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- bootstrap css -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -28,20 +29,6 @@
 
 	<!-- 카카오 스크립트 -->
 	<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-	<script>
-		let mobileYn;
-		$(function () {
-			if (matchMedia("screen and (min-width: 1024px)").matches) {
-				// 1024px 이상에서 사용할 JavaScript
-				console.log('1024px 이상 화면입니다.');
-				mobileYn = false;
-			} else {
-				// 1024px 미만에서 사용할 JavaScript
-				console.log('1024px 미만 화면입니다.');
-				mobileYn = true;
-			}
-		})
-	</script>
 </head>
 
 	<body class="w-100 h-100">
