--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/index.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/index.html
@@ -9,8 +9,8 @@
 
 	<div layout:fragment="content" class="text-center py-5 my-5">
 		<div>
-			<h1 class="display-4 text-primary">제11회 변호사시험 합격예측</h1>
-			<h1 class="display-1 text-primary">심심풀이 테스트</h1>
+			<h1 class="display-3 text-primary" style="font-family: 'NEXON Lv1 Gothic OTF';">제11회 변호사시험</h1>
+			<h1 class="display-1 text-primary">합격예측 테스트</h1>
 		</div>
 		<div class="my-5">
 			<button type="button" class="btn btn-primary btn-lg btn-block px-5 py-3 text-light" onclick="login();">시작하기</button>
