--- a/RowingMachine-MVP/src/main/resources/templates/view/quiz/sidebar/quizNav.html
+++ b/RowingMachine-MVP/src/main/resources/templates/view/quiz/sidebar/quizNav.html
@@ -2,13 +2,13 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="sidebarFragment">
-	<div class="border-primary border-end p-5" style="font-family: 'KOTRA_BOLD-Bold';">
+	<div class="border-primary border-start p-5" style="font-family: 'KOTRA_BOLD-Bold';">
 		<th:block th:each=cnmmCd:${cnmmCdList}>
 			<div class="mb-5">
 				<div class="display-6">
 					<a href="#" th:text="${cnmmCd.cmmnDtlNm}"></a>
 				</div>
-				<div class="row row-cols-auto">
+				<div class="row row-cols-auto quizNavDiv">
 					<th:block th:each="quiz : ${quizResultList}" th:if="${cnmmCd.cmmnDtlCd == quiz.subjectTypeCd}">
 						<div class="col fs-5" style="width:50px;"
 							th:classappend="${#strings.isEmpty(quiz.userAnswer)} ? '' : bg-secondary">
